Adicionar rotas de get e create para os Events KAN#3
